# Coldchain-Visibility-Platform

./: .prettierignore  .prettierrc  Coldchain-Visibility-Platform.code-workspace  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json
.github/workflows/: production.build.yml  production.deploy.yml  production.test.yml
api/: Dockerfile.dev  Dockerfile.prod  main.py  pyproject.toml
api/src/: __init__.py
api/src/listener/: __init__.py
api/src/persistence/: __init__.py
api/src/route/: __init__.py
core/: pyproject.toml
core/src/: __init__.py
core/src/persistence/: __init__.py  user.py
core/src/persistence/schema/: user.sql
core/src/route/: __init__.py
core/src/route/mutate/: __init__.py  create_user.py
core/src/route/query/: __init__.py  display_user.py
core/src/route/resolve/: user.py
mock/: main.py  pyproject.toml
mock/src/: __init__.py
mosquitto/: mosquitto.conf
supabase/: config.toml
supabase/migrations/: 0001_create_user.sql  001_coldtag.sql  002_node_coldtag_unlink_core_id.sql  003_alter_connection_status_strategy.sql  004_coordinate_record.sql  005_route_cycle.sql  006_route_cycle_departure_destination.sql  007_route_cycle_canceled.sql  008_route_cycle_started.sql  009_route_cycle_dispatch_completion.sql
web/: .env.development  .env.production  Dockerfile.dev  Dockerfile.prod  components.json  eslint.config.js  graphql-codegen.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
web/app/: app-bar.tsx  global.css  globals.css  layout.tsx  navigation-progress.tsx  page.tsx  template.tsx
web/app/dashboard/: CoreTelemetryEventChart.tsx  DashboardFormPage.tsx  DashboardShowcaseTemplate.tsx  DashboardSidebar.tsx  EventDialog.tsx  NodeAlertEventChart.tsx  NodeTelemetryEventChart.tsx  form.tsx  page.graphql  page.tsx  template.tsx
web/common/: route.ts  string.ts
web/components/: button.tsx
web/components/assets/: account-icon.tsx  cubes-icon.tsx
web/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  (+41 more)
web/fonts/: index.ts
web/lib/: tw.ts
web/stores/: error.tsx  index.tsx  supabase.tsx
(+100 files in other folders)
